--- a/about.html
+++ b/about.html
@@ -4,16 +4,32 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="home.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Nyrex-Coding</title>
   </head>
   <body>
       <marquee behavior="scroll" direction="left">Welcom to nyrex website i hope injoying website and services...!&nbsp;&nbsp;
          <font color="red"> *Please go to registerd and get awesome discount's...thanks for visiting our website.*</font>
       </marquee>
+      <div class="input-icons">
+        <i class="fa fa-search icon">
+        </i>
+        <input type="text" class="search-box" id="myInput" onclick="showEF()" onkeyup="myFunction()" placeholder="Click to search and click to close...">
+      </div>
+        <div id="myDIV">
+  <ul id="myUL" class="virtical-menu">
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="Gallery.html">Gallery</a></li>
+    <li><a href="#">Website</a></li>
+    <li><a href="#">Android</a></li>
+    <li><a href="#">Desktop</a></li>
+  </ul>
+</div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="home.html">N<font color="#FF5733">yre</font>x-Co<font color="#FF5733">din</font>g!</a>
@@ -144,6 +160,42 @@
         target: '#navbar-example'
         })
         </script>
-        
+
+</script> 
+<!-- ul dispaly show and hide function -->
+<script>
+function showEF() {
+const list = document.getElementById("myDIV");
+if (list.style.display === "block") {
+list.style.display = "none";
+} else {
+list.style.display = "block";
+}
+
+}
+</script>
+
+<script>
+  function myFunction() {
+// Declare variables
+var input, filter, ul, li, a, i, txtValue;
+input = document.getElementById('myInput');
+filter = input.value.toUpperCase();
+ul = document.getElementById("myUL");
+li = ul.getElementsByTagName('li');
+
+// Loop through all list items, and hide those who don't match the search query
+for (i = 0; i < li.length; i++) {
+  a = li[i].getElementsByTagName("a")[0];
+  txtValue = a.textContent || a.innerText;
+  if (txtValue.toUpperCase().indexOf(filter) > -1) {
+    li[i].style.display = "";
+  } else {
+    li[i].style.display = "none";
+  }
+}
+}
+</script>
+
       </body>
     </html>
