--- a/register.html
+++ b/register.html
@@ -8,50 +8,12 @@
       <link rel="stylesheet" href="home.css">
        <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
    <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="home.html">N<font color="#FF5733">yre</font>x-Co<font color="#FF5733">din</font>g!</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="home.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-capitalize active" href="about.html" >About us</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle active" href="service.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Services
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Website</a></li>
-                  <li><a class="dropdown-item" href="#">Android App</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Desktop software</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-capitalize active" href="Gallery.html" >Gallery</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-capitalize active" href="contact.html" >Contact Us</a>
-            </li>
-          </ul>
-          <!-- <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form> -->
-        </div>
-      </div>
-    </nav>
-  <header>
       <div class="wrapper">
+         <i class="fa fa-arrow-left" style="font-size: 20px; cursor: pointer;" onclick="goBack()" aria-hidden="true"></i>
          <div class="title-text">
             <div class="title login">
                Login Form
@@ -69,25 +31,30 @@
                <div class="slider-tab"></div>
             </div>
             <div class="form-inner">
-               <form action="#" class="login">
+               <form class="login">
                   <div class="field">
-                     <input type="text" placeholder="Email Address" required>
+                     <input type="text" placeholder="Email Address">
                   </div>
-                  <div class="field">
-                     <input type="password" placeholder="Password" required>
+                  < class="field">
+                     <input type="password" placeholder="Password">
+                     <!-- An element to toggle between password visibility -->
+                     <input type="checkbox" onclick="myFunction()">Show Password
                   </div>
                   <div class="pass-link">
                      <a href="#">Forgot password?</a>
                   </div>
                   <div class="field btn">
                      <div class="btn-layer"></div>
-                     <input type="submit" value="Login">
+                     <input type="submit" id="login-btn" onclick="login()" value="Login">
                   </div>
                   <div class="signup-link">
                      Not a member? <a href="">Signup now</a>
                   </div>
                </form>
                <form action="#" class="signup">
+                  <div class="field">
+                     <input type="text" placeholder="Name" required>
+                  </div>
                   <div class="field">
                      <input type="text" placeholder="Email Address" required>
                   </div>
@@ -105,12 +72,6 @@
             </div>
          </div>
       </div>     
-  </header>
-      <!-- footer code start -->
- <footer class="bg-secondary text-white text-center fotter-code">
-  <p>&copy; nyrex all copyright reserved</p>
-   </footer>
-    <!-- footer code end -->
       <!-- Optional JavaScript; choose one of the two! -->
   
       <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -146,5 +107,30 @@
            return false;
          });
       </script>
+
+      <script>
+         function login(){
+            alert("hello sir i am woking")
+//             const spinner = <div class="spinner-border" role="status">
+//   <span class="visually-hidden">Loading...</span></div>
+//   $("#login-btn").html(spinner);
+         }
+      </script>
+      <script>
+         function goBack() {
+           window.history.back();
+         }
+         </script>
+         <!-- password show and hide function -->\
+         <script>
+            function myFunction() {
+  var x = document.getElementById("myInput");
+  if (x.type === "password") {
+    x.type = "text";
+  } else {
+    x.type = "password";
+  }
+}
+         </script>
    </body>
 </html>
